--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bunyan": "^1.8.10",
     "dynamoose": "^0.8.3",
+    "http-status-codes": "^1.2.0",
     "lodash": "^4.17.4",
     "uuid": "^2.0.3"
   },
