--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.63.0",
     "serverless-cors-plugin": "^0.4.2",
     "serverless-dynamodb-local": "^0.2.18",
+    "serverless-kms-secrets": "^0.9.7",
     "serverless-offline": "^3.8.3"
   }
 }
