--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "invoices-backend",
+  "name": "invoicing-platform",
   "version": "0.1.0",
   "dependencies": {
     "bs58": "^4.0.1",
@@ -7,13 +7,7 @@
     "dynamoose": "^0.8.3",
     "http-status-codes": "^1.2.0",
     "lodash": "^4.17.4",
-    "uuid": "^2.0.3"
-  },
-  "devDependencies": {
-    "aws-sdk": "^2.63.0",
-    "serverless-cors-plugin": "^0.4.2",
-    "serverless-dynamodb-local": "^0.2.18",
-    "serverless-kms-secrets": "^0.9.7",
-    "serverless-offline": "^3.8.3"
+    "uuid": "^2.0.3",
+    "babel-polyfill": "^6.16.0"
   }
 }
