--- a/package.json
+++ b/package.json
@@ -33,36 +33,31 @@
     "lodash": "^4.17.4",
     "uuid": "^2.0.3",
     "babel-polyfill": "^6.16.0",
-
-
     "apollo-client": "^1.0.0-rc.2",
     "classnames": "2.2.5",
     "graphql-tag": "^1.2.3"
   },
   "devDependencies": {
     "aws-sdk": "^2.63.0",
-    "serverless-cors-plugin": "^0.4.2",
-    "serverless-dynamodb-local": "^0.2.18",
-    "serverless-kms-secrets": "^0.9.7",
-    "serverless-offline": "^3.8.3",
-
-
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-2": "^6.16.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
     "body-parser": "^1.15.2",
     "css-loader": "^0.27.2",
     "env-cmd": "^5.0.0",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-flowtype": "^2.11.4",
+    "eslint-plugin-html": "^3.1.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.1.0",
     "exports-loader": "^0.6.3",
     "express": "^4.15.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.5",
@@ -78,6 +73,10 @@
     "pre-commit": "^1.1.3",
     "require-clean": "0.1.3",
     "serve-favicon": "^2.3.0",
+    "serverless-cors-plugin": "^0.4.2",
+    "serverless-dynamodb-local": "^0.2.18",
+    "serverless-kms-secrets": "^0.9.7",
+    "serverless-offline": "^3.8.3",
     "style-loader": "^0.14.1",
     "stylelint": "^7.3.1",
     "stylelint-config-standard": "^16.0.0",
