--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-2": "^6.16.0",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.4",
     "css-loader": "^0.27.2",
     "env-cmd": "^5.0.0",
     "eslint": "^3.4.0",
