--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "apollo-client": "^1.9.1",
     "vue": "^2.3.3",
+    "vue-apollo": "^2.1.0-beta.21",
     "vue-form-wizard": "^0.6.2",
     "vue-router": "^2.6.0"
   },
