--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
     "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-2": "^6.16.0",
