--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "graphql-tag": "^1.2.3",
     "http-status-codes": "^1.2.0",
     "lodash": "^4.17.4",
-    "uuid": "^2.0.3"
+    "uuid": "^2.0.3",
+    "vue": "^2.4.2",
+    "vue-apollo": "^2.1.0-beta.21",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.63.0",
