--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "env-cmd": "^5.0.0",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^14.0.0",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-flowtype": "^2.11.4",
     "eslint-plugin-html": "^3.1.1",
     "eslint-plugin-import": "^2.2.0",
