--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "uuid": "^2.0.3",
     "vue": "^2.4.2",
     "vue-apollo": "^2.1.0-beta.21",
+    "vue-form-wizard": "^0.6.3",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
@@ -87,6 +88,8 @@
     "stylelint": "^7.3.1",
     "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.7",
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.2",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.11.0",
