--- a/package.json
+++ b/package.json
@@ -26,75 +26,75 @@
   },
   "pre-commit": "lint:staged",
   "dependencies": {
-    "apollo-client": "^1.0.0-rc.2",
-    "babel-polyfill": "^6.16.0",
+    "apollo-client": "^1.9.1",
+    "babel-polyfill": "^6.23.0",
     "bs58": "^4.0.1",
-    "bunyan": "^1.8.10",
+    "bunyan": "^1.8.12",
     "classnames": "2.2.5",
     "dynamoose": "^0.8.3",
-    "graphql-tag": "^1.2.3",
+    "graphql-tag": "^2.4.2",
     "http-status-codes": "^1.2.0",
     "lodash": "^4.17.4",
-    "uuid": "^2.0.3",
+    "uuid": "^3.1.0",
     "vue": "^2.4.2",
     "vue-apollo": "^2.1.0-beta.21",
     "vue-form-wizard": "^0.6.3",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
-    "aws-sdk": "^2.63.0",
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^6.4.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
+    "aws-sdk": "^2.98.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-stage-2": "^6.16.0",
-    "body-parser": "^1.15.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "body-parser": "^1.17.2",
     "cors": "^2.8.4",
-    "css-loader": "^0.27.2",
-    "env-cmd": "^5.0.0",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^14.0.0",
+    "css-loader": "^0.28.4",
+    "env-cmd": "^5.1.0",
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-plugin-flowtype": "^2.11.4",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-html": "^3.2.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.1.0",
-    "exports-loader": "^0.6.3",
-    "express": "^4.15.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.5",
-    "file-loader": "^0.10.0",
-    "flow-bin": "^0.42.0",
-    "graphql": "^0.9.1",
-    "html-webpack-plugin": "^2.21.0",
+    "eslint-plugin-react": "^7.2.1",
+    "exports-loader": "^0.6.4",
+    "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "flow-bin": "^0.52.0",
+    "graphql": "^0.10.5",
+    "html-webpack-plugin": "^2.30.1",
     "identity-obj-proxy": "^3.0.0",
-    "iflow-lodash": "^1.1.24",
-    "jest-cli": "^19.0.0",
-    "lint-staged": "^3.0.3",
-    "nodemon": "^1.10.0",
-    "pre-commit": "^1.1.3",
+    "iflow-lodash": "^1.1.27",
+    "jest-cli": "^20.0.4",
+    "lint-staged": "^4.0.3",
+    "nodemon": "^1.11.0",
+    "pre-commit": "^1.2.2",
     "require-clean": "0.1.3",
-    "serve-favicon": "^2.3.0",
+    "serve-favicon": "^2.4.3",
     "serverless-cors-plugin": "^0.4.2",
-    "serverless-dynamodb-local": "^0.2.18",
+    "serverless-dynamodb-local": "^0.2.25",
     "serverless-kms-secrets": "^0.9.7",
-    "serverless-offline": "^3.8.3",
-    "style-loader": "^0.14.1",
-    "stylelint": "^7.3.1",
-    "stylelint-config-standard": "^16.0.0",
-    "url-loader": "^0.5.7",
+    "serverless-offline": "^3.15.3",
+    "style-loader": "^0.18.2",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "url-loader": "^0.5.9",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.2",
-    "webpack": "^2.2.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.11.0",
+    "webpack": "^3.5.4",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2",
     "webpack-md5-hash": "0.0.5",
-    "whatwg-fetch": "^2.0.1"
+    "whatwg-fetch": "^2.0.3"
   },
   "jest": {
     "moduleNameMapper": {
