--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "apollo-client": "^1.9.1",
+    "graphql-tag": "^2.4.2",
     "vue": "^2.3.3",
     "vue-apollo": "^2.1.0-beta.21",
     "vue-form-wizard": "^0.6.2",
