--- a/package.json
+++ b/package.json
@@ -76,9 +76,11 @@
     "iflow-lodash": "^1.1.27",
     "jest-cli": "^20.0.4",
     "lint-staged": "^4.0.3",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "require-clean": "0.1.3",
+    "sass-loader": "^6.0.6",
     "serve-favicon": "^2.4.3",
     "serverless-cors-plugin": "^0.4.2",
     "serverless-dynamodb-local": "^0.2.25",
