--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
   "dependencies": {
     "apollo-client": "^1.9.1",
     "babel-polyfill": "^6.23.0",
+    "bitcore-lib": "^0.14.0",
+    "bitcore-mnemonic": "^1.2.5",
     "bs58": "^4.0.1",
     "bunyan": "^1.8.12",
     "classnames": "2.2.5",
+    "crypto": "^1.0.1",
     "dynamoose": "^0.8.3",
     "graphql-tag": "^2.4.2",
     "http-status-codes": "^1.2.0",
