--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint:staged": "lint-staged",
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
-    "test:coverage": "npm test -- --coverage --collectCoverageFrom 'frontend/**/*.js' --collectCoverageFrom 'backend/**/*.js' --collectCoverageFrom 'deployment/**/*.js'"
+    "test:coverage": "npm test -- --coverage --collectCoverageFrom 'frontend/**/*.js' --collectCoverageFrom 'backend/**/*.js' --collectCoverageFrom 'deployment/**/*.js'",
+    "dev": "MOCKED_DATABASE=true env-cmd deployment/environment/security.env.local babel-node deployment/dev-server.js"
   },
   "lint-staged": {
     "lint:eslint": "*.js",
@@ -99,7 +100,9 @@
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-md5-hash": "0.0.5",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "connect-history-api-fallback": "^1.3.0",
+    "opn": "^5.1.0"
   },
   "jest": {
     "moduleNameMapper": {
