--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:coverage": "npm test -- --coverage --collectCoverageFrom 'frontend/**/*.js' --collectCoverageFrom 'backend/**/*.js' --collectCoverageFrom 'deployment/**/*.js'",
-    "dev": "MOCKED_DATABASE=true env-cmd deployment/environment/security.env.local babel-node deployment/dev-server/server.js"
+    "dev": "MOCKED_DATABASE=true env-cmd deployment/environment/security.env.local babel-watch deployment/dev-server/server.js"
   },
   "lint-staged": {
     "lint:eslint": "*.js",
@@ -57,7 +57,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-watch": "^2.0.7",
     "body-parser": "^1.17.2",
+    "connect-history-api-fallback": "^1.3.0",
     "cors": "^2.8.4",
     "css-loader": "^0.28.4",
     "env-cmd": "^5.1.0",
@@ -82,6 +84,7 @@
     "lint-staged": "^4.0.3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
+    "opn": "^5.1.0",
     "pre-commit": "^1.2.2",
     "require-clean": "0.1.3",
     "sass-loader": "^6.0.6",
@@ -100,9 +103,7 @@
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-md5-hash": "0.0.5",
-    "whatwg-fetch": "^2.0.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "opn": "^5.1.0"
+    "whatwg-fetch": "^2.0.3"
   },
   "jest": {
     "moduleNameMapper": {
