--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,4 +1,4 @@
-service: invoices
+service: cb-invoices
 
 frameworkVersion: ">=1.1.0 <2.0.0"
 
@@ -9,8 +9,8 @@ plugins:
 
 provider:
   name: aws
-  stage: prod
-  region: us-east-1
+  stage: prod001
+  region: eu-west-2
   runtime: nodejs6.10
   memorySize: 256
   timeout: 5
