fixed frontend deployment

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "MOCKED_DATABASE=true env-cmd deployment/environment/security.env.local nodemon ./deployment/devServer --ignore frontend --exec babel-node",
     "start:remote": "MOCKED_DATABASE=false env-cmd deployment/environment/security.env.local nodemon ./deployment/devServer --ignore frontend --exec babel-node",
     "update-schema": "babel-node deployment/graphql/updateSchema.js",
-    "build:frontend": "NODE_ENV=production env-cmd deployment/environment/security.env.prod webpack --progress --config deployment/webpack/webpack.prod.js -p && cp ./frontend/favicon.ico ./build/frontend/favicon.ico",
+    "build:frontend": "env-cmd deployment/environment/security.env.prod node deployment/website/build.js",
     "build:backend": "NODE_ENV=production babel --out-dir='build/backend' --ignore='__tests__/*' ./backend && cp ./backend/kms-secrets.*.yml ./backend/package.json ./backend/yarn.lock ./backend/serverless.yml ./build/backend",
     "build:backend:node_modules": "cd build/backend && yarn && cd ../../",
     "deploy": "npm run deploy:backend && npm run deploy:frontend",
@@ -93,6 +93,7 @@
     "serverless-dynamodb-local": "^0.2.25",
     "serverless-kms-secrets": "^0.9.7",
     "serverless-offline": "^3.15.3",
+    "shelljs": "^0.7.8",
     "style-loader": "^0.18.2",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
