--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:backend": "NODE_ENV=production babel --out-dir='build/backend' --ignore='__tests__/*' ./backend && cp ./backend/kms-secrets.*.yml ./backend/package.json ./backend/yarn.lock ./backend/serverless.yml ./build/backend",
     "build:backend:node_modules": "cd build/backend && yarn && cd ../../",
     "deploy": "npm run deploy:backend && npm run deploy:frontend",
-    "deploy:frontend": "npm run build:frontend && aws s3 sync build/frontend/ s3://cb-invoices-prod001/",
-    "deploy:backend": "ENV_NAME=prod001; AWS_REGION=eu-west-2; npm run build:backend && npm run build:backend:node_modules && cd build/backend && serverless --stage=$ENV_NAME --region $AWS_REGION deploy",
+    "deploy:frontend": "npm run build:frontend && aws s3 sync build/frontend/ s3://invoices-prod-website/",
+    "deploy:backend": "npm run build:backend && npm run build:backend:node_modules && cd build/backend && serverless --stage=prod deploy",
     "lint": "npm run lint:eslint && npm run lint:css",
     "lint:eslint": "eslint .",
     "lint:eslint:fix": "eslint . --fix",
