--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql-tag": "^2.4.2",
     "http-status-codes": "^1.2.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "uuid": "^3.1.0",
     "vue": "^2.4.2",
     "vue-apollo": "^2.1.0-beta.21",
