--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dynamoose": "^0.8.3",
     "graphql-tag": "^2.4.2",
     "http-status-codes": "^1.2.0",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "uuid": "^3.1.0",
