--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "vue": "^2.4.2",
     "vue-apollo": "^2.1.0-beta.21",
     "vue-form-wizard": "^0.6.3",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-spinner": "^1.0.2"
   },
   "devDependencies": {
     "aws-sdk": "^2.98.0",
