--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "vue-apollo": "^2.1.0-beta.21",
     "vue-form-wizard": "^0.6.3",
     "vue-router": "^2.7.0",
-    "vue-spinner": "^1.0.2"
+    "vue-spinner": "^1.0.2",
+    "pay-to-contract-lib": "git://github.com/commerceblock/pay-to-contract-lib.git"
   },
   "devDependencies": {
     "aws-sdk": "^2.98.0",
