--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "pay-to-contract-lib": "git://github.com/commerceblock/pay-to-contract-lib.git",
     "uuid": "^3.1.0",
     "vue": "^2.4.2",
     "vue-apollo": "^2.1.0-beta.21",
+    "vue-clipboard2": "0.0.6",
     "vue-form-wizard": "^0.6.3",
     "vue-router": "^2.7.0",
-    "vue-spinner": "^1.0.2",
-    "pay-to-contract-lib": "git://github.com/commerceblock/pay-to-contract-lib.git"
+    "vue-spinner": "^1.0.2"
   },
   "devDependencies": {
     "aws-sdk": "^2.98.0",
