--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moment": "^2.18.1",
     "pay-to-contract-lib": "git://github.com/commerceblock/pay-to-contract-lib.git",
     "uuid": "^3.1.0",
+    "v-qrcode": "^1.0.3",
     "vue": "^2.4.2",
     "vue-apollo": "^2.1.0-beta.21",
     "vue-clipboard2": "0.0.6",
